Added ConfigurationController
